--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #3e7cd3;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+}
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style-type: none;
+}
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: antiquewhite;
+  width: 400px;
+  margin-top: 8px;
+  padding: 6px;
+  border-radius: 6px;
+}
+.addForm {
+  margin-top: 20px;
+}
+input {
+  outline: none;
+  border: 1px solid #333;
+  padding: 4px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  font-size: 18px;
+  width: 400px;
+}
+.btn {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 12px;
+}
+.btn button {
+  background-color: transparent;
+  border: 1px solid #333;
+  padding: 6px 24px;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+  border-radius: 4px;
+}
+.btn button:hover {
+  background-color: #333;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  background-color: rgb(255, 254, 252);
+  padding: 100px 90px;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
